<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cpinfo.familydoctor.activity.doctor.DoctorMainActivity">

    <!--内容视图-->
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/main_page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <include layout="@layout/common_line_horizontal" />

        <RadioGroup
            android:id="@+id/rg_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <!--医生-->
            <RadioButton
                android:id="@+id/doctor_mine"
                style="@style/main_btn_style"
                android:drawableTop="@drawable/mine_icon_selector"
                android:text="@string/rb_mine" />
            <!--医生KPI-->
            <RadioButton
                android:id="@+id/doctor_kpi"
                style="@style/main_btn_style"
                android:drawableTop="@drawable/kpi_icon_selector"
                android:text="@string/rb_kpi" />
            <!--医生通知-->
            <RadioButton
                android:id="@+id/doctor_notice"
                style="@style/main_btn_style"
                android:drawableTop="@drawable/notice_icon_selector"
                android:text="@string/rb_notice" />
            <!--医生问答-->
            <RadioButton
                android:id="@+id/doctor_answers"
                style="@style/main_btn_style"
                android:drawableTop="@drawable/answers_icon_selector"
                android:text="@string/rb_answers" />
        </RadioGroup>
    </LinearLayout>

    <!--左侧导航菜单-->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/doctor_left_menu_header" />

</android.support.v4.widget.DrawerLayout>
